[metadata]
name = data-analysis-tools-alpha
version = 0.0.1
author = Alpha
author_email = mailwb3@gmail.com
description = A text processor package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a731062834/data-analysis-tools-alpha
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.24.0
    jieba>=0.42.1
    setuptools>=42
    numpy>=1.24.4